--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
     <p>In the wee small hours of the morning
         While the whole wide world is fast asleep
         You lie awake and think about the girl
-        And never even think of counting sheep
-    </p>
+        And never even think of counting sheep</p>
+    <p>When your lonely heart has learned its lesson
+    You'd be hers if only she would call
+    In the wee small hours of the morning
+        That's the time you miss her most of all</p>
 </body>
 </html>
