--- a/index.html
+++ b/index.html
@@ -2,7 +2,11 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>module git task 7.4 task-4</title>
+HEAD
+    <title>module git task 7.4 <task-4></title>
+
+
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
