Add changes to task-4

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
 HEAD
-    <title>module git task 7.4 <task-4></title>
+    <title>module git task 7.4 task-4</title>
 
 
 
@@ -33,6 +33,7 @@ HEAD
         That's the time you miss her most
         That's the time you miss her most of all</p>
     <div>
+        <div>task-4</div>
 </body>
 </body>
 </html>
